--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.53-0.1.2.26-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Tue, 16 Sep 2025 21:06:04 +0300
+
 nitrocid-27 (3.1.27.53-0.1.2.25-1) noble; urgency=medium
 
   * Updated to Terminaux 7.0
