--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.56-0.1.2.31-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sun, 21 Dec 2025 13:06:12 +0300
+
 nitrocid-27 (3.1.27.56-0.1.2.30-1) noble; urgency=medium
 
   * General improvements and bug fixes
